# archiwrap

./: .coverage  .gitignore  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
src/archiwrap/: __init__.py  client.py  exceptions.py
src/archiwrap/utils/: case_conversion.py
tests/: conftest.py  test_case_conversion.py  test_client.py  test_exceptions.py
tests/fixtures/cassettes/: test_basic_search  test_custom_headers  test_invalid_request  test_non_json_content_type  test_request_different_methods
