[tool.poetry]
name = "archiwrap"
version = "0.1.0"
description = "A Pythonic wrapper for the National Archives API"
authors = ["Joseph A. Mienko] <josephanthonymienko@gmail.com>"]
readme = "README.md"
packages = [{include = "archiwrap", from = "src"}]
repository = "https://github.com/josephmienko/archiwrap"
documentation = "https://archiwrap.readthedocs.io"
keywords = ["archives", "api", "wrapper", "nara", "national-archives"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.1.1"
backoff = "^2.2.1"
urllib3 = "<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"  
coverage = "^7.6.1"  
pytest-mock = "^3.11.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
python-semantic-release = "^8.0.0"
responses = "^0.23.1"
sphinx = "^7.1.1"
sphinx-rtd-theme = "^1.2.2"
vcrpy = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true

[tool.semantic_release]
version_variable = ["src/archiwrap/__init__.py:__version__"]
branch = "main"
upload_to_pypi = true
build_command = "poetry build"

[tool.pytest.ini_options]
addopts = "--cov=src/archiwrap --cov-report=term-missing --cov-append"
